--- a/www/static/styles.css
+++ b/www/static/styles.css
@@ -1,7 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,500;1,6..96,500&display=swap');
+
+
+body{
+    background-color: #0d897b;
+}
+div, li, a {
+    font-family: "Bodoni Moda SC", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-size: 25px;
+}
+
 
 .navbar{
     display:flex; 
-    background-color: whitesmoke; 
+    
+    width: 100%;
 }
 
 .navcon{
@@ -11,21 +25,26 @@
     width: 100%;
 }
 .logo{
-    font-size: 35px; font-weight: 600; color:blue;
+    font-size: 35px; font-weight: 600; 
+    color:rgb(99, 219, 103);
+
 }
 
 a:hover{
-    background-color: rgb(205, 145, 145);
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    color:#63ab24;
 }
 
 li {
     list-style: none;
     display: inline-block;
+
 }
 
 a{
     padding-left: 15px;
-    padding-right:15px;
+    padding-right:10%;
     text-decoration: none;
 }
 
