--- a/www/static/styles.css
+++ b/www/static/styles.css
@@ -1,53 +1,124 @@
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,500;1,6..96,500&display=swap');
 
-
-body{
-    background-color: #0d897b;
+*{
+    background-color: #1E1E2F;
+    margin: 0; 
+    padding: 0;   
 }
-div, li, a {
-    font-family: "Bodoni Moda SC", serif;
-    font-optical-sizing: auto;
+
+li, a {
+    font-family: "Playfair Display", serif; 
     font-weight: 500;
-    font-size: 25px;
+    font-size: 30px;
+    text-decoration: none;
+    color: #F5F5F5;
 }
 
 
-.navbar{
-    display:flex; 
-    
-    width: 100%;
-}
-
-.navcon{
-    display: flex; 
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-}
 .logo{
-    font-size: 35px; font-weight: 600; 
-    color:rgb(99, 219, 103);
-
+    font-size: 2rem;
 }
 
-a:hover{
+.logo:hover{
+    cursor: default;
+}
+
+#desktop-nav{
+    display:flex; 
+    width: 100%;
+    padding: 2px;
+    justify-content:space-around;
+}
+
+.nav-menu{
+    list-style: none;
+}
+
+.nav-menu li{
+    display: inline-block; 
+    padding: 0 20px;
+}
+
+.nav-menu a:hover{
     text-decoration: underline;
     text-underline-offset: 1rem;
-    color:#63ab24;
+    
 }
 
-li {
+/* hamburger nav */
+#hamburger-nav{
+    display: none; 
+    justify-content: space-around;
+    padding: 0 20px; 
+    align-items: center;
+}
+
+.hamburger-menu{
+    position: relative; 
+    display: inline-block; 
+}
+
+.hamburger-icon{
+    display: flex; 
+    flex-direction: column;
+    justify-content: space-around; 
+    height: 24px; 
+    width: 30px; 
+    cursor: pointer;
+}
+
+.hamburger-icon span{
+    width: 100%; 
+    height: 2px; 
+    background-color: white;
+    transition: all 0.5s ease-in-out;
+}
+
+.menu-item{
+    position: absolute; 
+    top: 100%; 
+    right: 0;  
+    width: fit-content;
+    max-height: 0; 
+    overflow: hidden; 
+    transition: all 0.5s ease-in-out;
+   
+}
+
+.menu-item a{
+    display: block; 
+    padding:10px;
+    text-align: center; 
+    font-size: 1.5rem;
+    color: white; 
+    text-decoration: none; 
+    transition: all 0.5s ease-in-out;
+}
+
+
+.menu-item li{
     list-style: none;
-    display: inline-block;
-
 }
 
-a{
-    padding-left: 15px;
-    padding-right:10%;
-    text-decoration: none;
+.menu-item.open{
+    max-height:300px;
 }
 
+.hamburger-icon.open span:first-child{
+    transform: roate(45deg) translate(10px, 5px);
+}
 
+.hamburger-icon.open span:nth-child(2),
+.hamburger-icon.open span:nth-child(3){
+    opacity: 0; 
+}
+
+.hamburger-icon.open span:last-child{
+    transform: roate(-45deg) translate(10px, -5px);
+}
+
+.hamburger-icon span:first-child{
+    transform: none;
+}
 
 
