add navbar and about
cateogries the type of document into the folder

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="../static/css/mediaqueries.css">
     <title>Hello_President</title>
+
 </head>
 <body>
     <nav id="desktop-nav">
@@ -17,7 +18,7 @@
             <li> <a href="profile"> Profile</a></li>
             <li> <a href="profile"> Quiz</a></li>
             <li> <a href="jumpTo"> Jump</a></li>
-            <li> <a href="About"> About</a></li>
+            <li> <a href="about.html"> About</a></li>
         </ul>
     </nav>
 
@@ -38,7 +39,7 @@
                 <li> <a href="profile" onclick="toggleMenu()">Quiz</a></li>
                 <li> <a href="profile" onclick="toggleMenu()"> Profile</a></li>
                 <li> <a href="jumpTo" onclick="toggleMenu()"> Jump</a></li>
-                <li> <a href="About" onclick="toggleMenu()"> About</a></li>
+                <li> <a href="about.html" onclick="toggleMenu()"> About</a></li>
             </div>
         </div>
         
