making the alignment for small screen
the previous version, the alignment look bad

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -4,7 +4,7 @@
     <title>Our About Page</title>
     <link rel = "stylesheet" href = "../static/css/aboutstyles.css">
     <link rel = "stylesheet" href = "../static/css/styles.css">
-    <link rel="stylesheet" href="/static/css/mediaqueries.css">
+    <link rel="stylesheet" href="../static/css/mediaqueries.css">
     
 </head>
 
@@ -107,4 +107,7 @@
     </div>
    </section>
 
+   <script src="../static/script/script.js"></script>
+
 </body>
+</html>
