--- a/www/static/css/aboutstyles.css
+++ b/www/static/css/aboutstyles.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,500;1,6..96,500&display=swap');
 
+
+li, a {
+    font-family: "Playfair Display", serif; 
+    font-weight: 500;
+    font-size: 30px;
+    text-decoration: none;
+    color: #F5F5F5;
+}
+
 *{
     font-family: "Playfair Display", serif; 
     font-weight: 300;
@@ -19,7 +28,6 @@
     padding: 25px 50px;
     align-self: center;
     flex-direction: column;
-    
 }
 
 .containter__author{
@@ -27,22 +35,32 @@
     padding: 50px; 
 }
 
+.about__purpose{
+    min-width: 500px;
+    text-align: center;
+}
+
+
 .about__author, .about__purpose{
     display: flex; 
     flex-direction: column;
     width: 100%vh; 
     height: 100%vh;
-    text-align: center;
     color: white;
     margin: 50px;
-
 }
 
+.author__photo{
+    width: 30%;
+    border: 3px solid white;
+    min-width: 175px;
+}
 .author__photo img {
-    width: 150px; /* Adjust the size as needed */
-    height: 150px; /* Adjust the size as needed */
-    object-fit: cover; /* Ensures the image covers the area without distortion */
-    border-radius: 50%; /* Optional: makes the image circular */
+    width: 175px; 
+    height: 175px; 
+    object-fit: cover; 
+    border-radius: 50%; 
+    justify-content: end;
 }
 
 .author1, 
@@ -51,10 +69,19 @@
     display: flex; 
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    padding: 15px 0;
+    border: 3px solid brown;
+    
    
 }
-
+.author__text{
+    padding: 0 20px;
+    width:100%;
+    height: 100%;
+    border: 3px solid red;
+    min-width: 400px;
+    text-align: center;;
+}
 .author__text p {
     font-size: 20px;
 }
