--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -50,7 +50,7 @@
 
         
        
-   <script src="script.js"></script>
+   <script src="../static/script/script.js"></script>
     
 </body>
 </html>
