--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -72,6 +72,10 @@
                     <p>Hello I'm Mengsrun Nit, I am an Junior at Furman University
                         I like watching soccer game, and I am a Bacelona Fan. I also like to cook and eat. 
                     </p>
+                    <div class = 'contacts_author'>
+                        <a href="https://github.com/MengsrunNit"> <div class = "tiny_picture"><img src = "../asset/img/githubLogo.png"></div></a>
+                        <a href="https://www.linkedin.com/in/mengsrunnit/"> <div class = "tiny_picture"><img src = "../asset/img/linkedin.png"></div></a>
+                    </div>
                 </div>
             </div>
 
@@ -84,7 +88,12 @@
                     <p>I am a Furman IT and chemistry major. I love my pet turtle Mr. 
                         Spootus Mootis and gardening.
                     </p>
+                    <div class = 'contacts_author'>
+                        <a href="https://github.com/MengsrunNit"> <div class = "tiny_picture"><img src = "../asset/img/githubLogo.png"></div></a>
+                        <a href="https://www.linkedin.com/in/mengsrunnit/"> <div class = "tiny_picture"><img src = "../asset/img/linkedin.png"></div></a>
+                    </div>
                 </div>
+                
             </div>
 
             <div class="author3">
@@ -100,7 +109,12 @@
                         I love all asian food, specifically Cambodian, 
                         and go to Bulgogi Korean Grill frequently. 
                     </p>
-            </div>
+                    <div class = 'contacts_author'>
+                        <a href="https://github.com/MengsrunNit"> <div class = "tiny_picture"><img src = "../asset/img/githubLogo.png"></div></a>
+                        <a href="https://www.linkedin.com/in/mengsrunnit/"> <div class = "tiny_picture"><img src = "../asset/img/linkedin.png"></div></a>
+                    </div>
+                </div>
+
 
         </div>
                     
