--- a/www/static/css/mainPageStyle.css
+++ b/www/static/css/mainPageStyle.css
@@ -115,3 +115,12 @@ nav{
     width: 200px;
     height: 150px;
   }
+
+  tiny_picture img{
+    width: 50px;
+    border-radius: 15%;
+}
+.contact_author{
+    display: flex;
+    flex-direction: row;
+}
