--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -47,7 +47,7 @@
    <section id="section__about">
     <div class="about__purpose">
         <img src="../asset/img/whiteHouse.avif", class="whiteHouse">
-        <h1>The Purpose</h1>
+        <h1>Purpose</h1>
         <p>
             Mr. President is an interactive timeline of the United States presidents.
             Each president photo on the timeline is linked to a profile page with fun facts, 
@@ -68,7 +68,7 @@
                     <img src = "../asset/img/mengsrunpf.jpg">
                 </div>
                 <div class="author__text">
-                    <h1> Mengsrun Nit</h1>
+                    <h2> Mengsrun Nit</h2>
                     <p>Hello I'm Mengsrun Nit, I am an Junior at Furman University
                         I like watching soccer game, and I am a Bacelona Fan. I also like to cook and eat. 
                     </p>
@@ -84,7 +84,7 @@
                     <img src = "../asset/img/olivia.jpeg">
                 </div>
                 <div class="author__text">
-                    <h1> Olivia Longsworth</h1>
+                    <h2> Olivia Longsworth</h2>
                     <p>I am a Furman IT and chemistry major. I love my pet turtle Mr. 
                         Spootus Mootis and gardening.
                     </p>
@@ -101,7 +101,7 @@
                     <img src = "../asset/img/flynn.jpeg">
                 </div>
                 <div class="author__text">
-                    <h1> Flynn Nisbet</h1>
+                    <h2> Flynn Nisbet</h2>
                     <p>I am a Furman senior Computer Science major,
                         minoring in Data Analytics, who grew up in Cambodia.
                         I went to high school in China, then the Netherlands, 
