--- a/www/static/css/aboutstyles.css
+++ b/www/static/css/aboutstyles.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,500;1,6..96,500&display=swap');
 
 
-li, a {
-    font-family: "Playfair Display", serif; 
-    font-weight: 500;
-    font-size: 30px;
-    text-decoration: none;
-    color: #F5F5F5;
+
+h1{
+    font-size: 50px;
+    font-style: italic;
+    margin: 10px;
+    text-align: center;
+}
+h2{
+    font-size: 35px;
 }
 
 *{
@@ -37,7 +40,7 @@ p
 }
 
 .about__purpose{
-    min-width: 500px;
+    min-width: 300px;
     text-align: center;
 }
 
@@ -48,7 +51,7 @@ p
     width: 100%vh; 
     height: 100%vh;
     color: white;
-    margin: 50px;
+    margin: 20px;
 }
 
 .author__photo{
@@ -78,7 +81,7 @@ p
     padding: 0 20px;
     width:100%;
     height: 100%;
-    min-width: 400px;
+    min-width: 300px;
     text-align: center;
 }
 p {
@@ -88,10 +91,11 @@ p {
 .tiny_picture img{
     width: 50px;
     border-radius: 15%;
+    margin: 10px;
     
 }
-.contact_author{
-    display: flex;
-    flex-direction: column;
-
+.contacts_author{
+    display: flex inline;
+    flex-direction: row;
+    padding: 10px;
 }
