--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -89,8 +89,8 @@
                         Spootus Mootis and gardening.
                     </p>
                     <div class = 'contacts_author'>
-                        <a href="https://github.com/MengsrunNit"> <div class = "tiny_picture"><img src = "../asset/img/githubLogo.png"></div></a>
-                        <a href="https://www.linkedin.com/in/mengsrunnit/"> <div class = "tiny_picture"><img src = "../asset/img/linkedin.png"></div></a>
+                        <a href="https://github.com/olongsworth"> <div class = "tiny_picture"><img src = "../asset/img/githubLogo.png"></div></a>
+                        <a href="https://www.linkedin.com/in/olivia-longsworth/"> <div class = "tiny_picture"><img src = "../asset/img/linkedin.png"></div></a>
                     </div>
                 </div>
                 
@@ -110,8 +110,8 @@
                         and go to Bulgogi Korean Grill frequently. 
                     </p>
                     <div class = 'contacts_author'>
-                        <a href="https://github.com/MengsrunNit"> <div class = "tiny_picture"><img src = "../asset/img/githubLogo.png"></div></a>
-                        <a href="https://www.linkedin.com/in/mengsrunnit/"> <div class = "tiny_picture"><img src = "../asset/img/linkedin.png"></div></a>
+                        <a href="https://github.com/flynisbet"> <div class = "tiny_picture"><img src = "../asset/img/githubLogo.png"></div></a>
+                        <a href="https://www.linkedin.com/in/flynn-nisbet/"> <div class = "tiny_picture"><img src = "../asset/img/linkedin.png"></div></a>
                     </div>
                 </div>
 
