--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -45,7 +45,38 @@
         
     </nav>
             
-        
+    <section id="timeline">
+        <ul>
+            <li>
+                <div class = "president_box">
+                    <div class = "box_heading">
+                        <h3 class = "title">George Washington <span class = "year"> 1789-1797 </span></h3>
+                    </div>
+                    <div class = "box_body">
+                        <img src = "../asset/img/joeBiden.png">
+                        <p> Info goes here. </p>
+                        <button>Read More</button>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <div class = "president_box">
+                    <div class = "box_heading">
+                        <h3 class = "title">George Washington <span class = "year"> 1789-1797 </span></h3>
+                    </div>
+                    <div class = "box_body">
+                        <img src = "../asset/img/joeBiden.png">
+                        <p> Info goes here. </p>
+                        <button>Read More</button>
+                    </div>
+                </div>
+            </li>
+        </ul>
+            <li>
+
+            </li>
+    </section>
        
 
         
