--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -2,8 +2,10 @@
 
 <head>
     <title>Our About Page</title>
-    <link rel = "stylesheet" href = "../static/css/aboutstyles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "../static/css/styles.css">
+    <link rel = "stylesheet" href = "../static/css/aboutstyles.css">
+    
     <link rel="stylesheet" href="../static/css/mediaqueries.css">
     
 </head>
@@ -35,7 +37,7 @@
                 <span></span>
             </div>
             <div class="menu-item">
-                <li> <a href="index.html" onclick="toggleMenu()"> Home</a></li>
+                <li> <a href="home" onclick="toggleMenu()"> Home</a></li>
                 <li> <a href="profile" onclick="toggleMenu()">Quiz</a></li>
                 <li> <a href="profile" onclick="toggleMenu()"> Profile</a></li>
                 <li> <a href="jumpTo" onclick="toggleMenu()"> Jump</a></li>
