--- a/www/templates/timeline.html
+++ b/www/templates/timeline.html
@@ -7,27 +7,25 @@
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" href="../static/css/mediaqueries.css">
     <link rel="stylesheet" href="../static/css/timelineStyles.css"
-    
+    <link rel="stylesheet" href="../static/css/mediaqueries.css">
 </head>
 <body>
     <nav id="desktop-nav">
-        <div class='logo'> 
-        <a href="#"> Mr.President</a>    
+        <div class='logo'>
+        <a href="#"> Mr.President</a>
         </div>
         <ul class="nav-menu">
-            <li> <a href="home"> Home</a></li>
-            <li> <a href="profile"> Profile</a></li>
+            <li> <a href="index.html"> Home</a></li>
+            <li> <a href="timeline.html"> Profile</a></li>
             <li> <a href="profile"> Quiz</a></li>
             <li> <a href="jumpTo"> Jump</a></li>
             <li> <a href="about.html"> About</a></li>
         </ul>
     </nav>
-
     <nav id="hamburger-nav">
         <div class="logo">
-            <a href="#"> Mr.President</a> 
+            <a href="#"> Mr.President</a>
         </div>
-
         <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
                 <span></span>
@@ -36,65 +34,71 @@
                 <span></span>
             </div>
             <div class="menu-item">
-                <li> <a href="home" onclick="toggleMenu()"> Home</a></li>
-                <li> <a href="profile" onclick="toggleMenu()">Quiz</a></li>
+                <li> <a href="index.html" onclick="toggleMenu()"> Home</a></li>
+                <li> <a href="timeline.html" onclick="toggleMenu()">Quiz</a></li>
                 <li> <a href="profile" onclick="toggleMenu()"> Profile</a></li>
                 <li> <a href="jumpTo" onclick="toggleMenu()"> Jump</a></li>
                 <li> <a href="about.html" onclick="toggleMenu()"> About</a></li>
             </div>
         </div>
-        
     </nav>
-            
     <section id ="timeline">
         <div class="timeline-containers">
-
-            <div class="container">
+            <div class="timeline-container">
+                <div class="timeline-dot"></div>
+                <div class="timeline-rank">44th</div>
                 <div class="textbox">
                     <img src="../asset/img/joeBiden.jpg">
                     <h3 class = "title">Joe Biden </h3>
                     <p> 1789-1797 </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco
+                         laboris nisi ut aliquip.</p>
                     <button class='btn'> Read More</button>
-                  
                 </div>
             </div>
-                <div class="container">
+                <div class="timeline-container">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-rank">44th</div>
                     <div class="textbox">
                         <img src="../asset/img/joeBiden.jpg">
                         <h3 class = "title">George Washington </h3>
                         <p> 1789-1797 </p>
-                        <button class='btn'> Read More</button>
-                        
-                    </div>
-                </div>
-
-                <div class="container">
-                    <div class="textbox">
-                        <img src="../asset/img/joeBiden.jpg">
-                        <h3 class = "title">George Washington </h3>
-                        <p> 1789-1797 </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco
+                             laboris nisi ut aliquip.</p>
                         <button class='btn'> Read More</button>
                     </div>
                 </div>
-
-                <div class="container">
-            
+                <div class="timeline-container">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-rank">44th</div>
                     <div class="textbox">
                         <img src="../asset/img/joeBiden.jpg">
                         <h3 class = "title">George Washington </h3>
                         <p> 1789-1797 </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco
+                             laboris nisi ut aliquip.</p>
+                        <button class='btn'> Read More</button>
+                    </div>
+                </div>
+                <div class="timeline-container">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-rank">44th</div>
+                    <div class="textbox">
+                        <img src="../asset/img/joeBiden.jpg">
+                        <h3 class = "title">George Washington </h3>
+                        <p> 1789-1797 </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco
+                             laboris nisi ut aliquip.</p>
                         <button class='btn'> Read More</button>
                     </div>
                 </div>
         </div>
-           
     </div>
     </section>
-        
-       
-
-        
-       
    <script src="../static/script/script.js"></script>
 </body>
 </html>
