--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -17,7 +17,7 @@
         </div>
         <ul class="nav-menu">
             <li> <a href="index.html"> Home</a></li>
-            <li> <a href="profile"> Profile</a></li>
+            <li> <a href="timeline.html"> Profile</a></li>
             <li> <a href="profile"> Quiz</a></li>
             <li> <a href="jumpTo"> Jump</a></li>
             <li> <a href="about.html"> About</a></li>
@@ -37,9 +37,9 @@
                 <span></span>
             </div>
             <div class="menu-item">
-                <li> <a href="home" onclick="toggleMenu()"> Home</a></li>
+                <li> <a href="index.html" onclick="toggleMenu()"> Home</a></li>
+                <li> <a href="timeline.html" onclick="toggleMenu()"> Profile</a></li>
                 <li> <a href="profile" onclick="toggleMenu()">Quiz</a></li>
-                <li> <a href="profile" onclick="toggleMenu()"> Profile</a></li>
                 <li> <a href="jumpTo" onclick="toggleMenu()"> Jump</a></li>
                 <li> <a href="about.html" onclick="toggleMenu()"> About</a></li>
             </div>
