--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -14,8 +14,8 @@
         <a href="#"> Mr.President</a>    
         </div>
         <ul class="nav-menu">
-            <li> <a href="home"> Home</a></li>
-            <li> <a href="profile"> Profile</a></li>
+            <li> <a href="index.html"> Home</a></li>
+            <li> <a href="timeline.html"> Profile</a></li>
             <li> <a href="profile"> Quiz</a></li>
             <li> <a href="jumpTo"> Jump</a></li>
             <li> <a href="about.html"> About</a></li>
@@ -35,9 +35,9 @@
                 <span></span>
             </div>
             <div class="menu-item">
-                <li> <a href="home" onclick="toggleMenu()"> Home</a></li>
+                <li> <a href="index.html" onclick="toggleMenu()"> Home</a></li>
+                <li> <a href="timeline.html" onclick="toggleMenu()"> Profile</a></li>
                 <li> <a href="profile" onclick="toggleMenu()">Quiz</a></li>
-                <li> <a href="profile" onclick="toggleMenu()"> Profile</a></li>
                 <li> <a href="jumpTo" onclick="toggleMenu()"> Jump</a></li>
                 <li> <a href="about.html" onclick="toggleMenu()"> About</a></li>
             </div>
