--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -65,7 +65,7 @@
     <div class="about__author">
         <h1>Author</h1>
         <div class="containter__author">
-            <div class="author1">
+            <div class="author">
                 <div class="author__photo">
                     <img src = "../asset/img/mengsrunpf.jpg">
                 </div>
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="author2">
+            <div class="author">
                 <div class="author__photo">
                     <img src = "../asset/img/olivia.jpeg">
                 </div>
@@ -98,7 +98,7 @@
                 
             </div>
 
-            <div class="author3">
+            <div class="author">
                 <div class="author__photo">
                     <img src = "../asset/img/flynn.jpeg">
                 </div>
