--- a/www/templates/timeline.html
+++ b/www/templates/timeline.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Hello_President</title>
+  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="../static/css/timelineStyles.css">
+
     <link rel="stylesheet" href="../static/css/mediaqueries.css">
-    <link rel="stylesheet" href="../static/css/timelineStyles.css"
-    <link rel="stylesheet" href="../static/css/mediaqueries.css">
+    <title>President_Timeline</title>
+
 </head>
 <body>
     <nav id="desktop-nav">
@@ -17,8 +19,8 @@
         <ul class="nav-menu">
             <li> <a href="index.html"> Home</a></li>
             <li> <a href="timeline.html"> Profile</a></li>
-            <li> <a href="profile"> Quiz</a></li>
-            <li> <a href="jumpTo"> Jump</a></li>
+            <li> <a href="#"> Quiz</a></li>
+            <li> <a href="#"> Jump</a></li>
             <li> <a href="about.html"> About</a></li>
         </ul>
     </nav>
@@ -35,22 +37,23 @@
             </div>
             <div class="menu-item">
                 <li> <a href="index.html" onclick="toggleMenu()"> Home</a></li>
-                <li> <a href="timeline.html" onclick="toggleMenu()">Quiz</a></li>
-                <li> <a href="profile" onclick="toggleMenu()"> Profile</a></li>
+                <li> <a href="timeline.html" onclick="toggleMenu()"> Profile</a></li>
+                <li> <a href="#" onclick="toggleMenu()">Quiz</a></li>
                 <li> <a href="jumpTo" onclick="toggleMenu()"> Jump</a></li>
                 <li> <a href="about.html" onclick="toggleMenu()"> About</a></li>
             </div>
         </div>
     </nav>
     <section id ="timeline">
+        <div class="timetine-title">President Of United State Of America</div>
         <div class="timeline-containers">
             <div class="timeline-container">
                 <div class="timeline-dot"></div>
-                <div class="timeline-rank">44th</div>
+                <div class="timeline-rank">46th</div>
                 <div class="textbox">
                     <img src="../asset/img/joeBiden.jpg">
                     <h3 class = "title">Joe Biden </h3>
-                    <p> 1789-1797 </p>
+                    <p> 2021-Present </p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                         quis nostrud exercitation ullamco
                          laboris nisi ut aliquip.</p>
@@ -59,11 +62,11 @@
             </div>
                 <div class="timeline-container">
                     <div class="timeline-dot"></div>
-                    <div class="timeline-rank">44th</div>
+                    <div class="timeline-rank">45th</div>
                     <div class="textbox">
-                        <img src="../asset/img/joeBiden.jpg">
-                        <h3 class = "title">George Washington </h3>
-                        <p> 1789-1797 </p>
+                        <img src="../asset/img/45_Trump.jpeg">
+                        <h3 class = "title">Donald Trump </h3>
+                        <p> 2017-2021 </p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco
                              laboris nisi ut aliquip.</p>
@@ -74,9 +77,9 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-rank">44th</div>
                     <div class="textbox">
-                        <img src="../asset/img/joeBiden.jpg">
-                        <h3 class = "title">George Washington </h3>
-                        <p> 1789-1797 </p>
+                        <img src="../asset/img/44_Obama.jpeg">
+                        <h3 class = "title">Barack Obama</h3>
+                        <p> 2009-2017 </p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco
                              laboris nisi ut aliquip.</p>
@@ -87,8 +90,36 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-rank">44th</div>
                     <div class="textbox">
-                        <img src="../asset/img/joeBiden.jpg">
-                        <h3 class = "title">George Washington </h3>
+                        <img src="../asset/img/43_Bush.jpeg">
+                        <h3 class = "title">George W. Bush </h3>
+                        <p> 1789-1797 </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco
+                             laboris nisi ut aliquip.</p>
+                        <button class='btn'> Read More</button>
+                    </div>
+                </div>
+            
+                <div class="timeline-container">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-rank">44th</div>
+                    <div class="textbox">
+                        <img src="../asset/img/42_Clinton.jpeg">
+                        <h3 class = "title">Bill Clinton </h3>
+                        <p> 1789-1797 </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco
+                             laboris nisi ut aliquip.</p>
+                        <button class='btn'> Read More</button>
+                    </div>
+                </div>
+
+                <div class="timeline-container">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-rank">44th</div>
+                    <div class="textbox">
+                        <img src="../asset/img/41_Bush.jpeg">
+                        <h3 class = "title">George H. W. Bush </h3>
                         <p> 1789-1797 </p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco
