--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -37,8 +37,8 @@
             <div class="menu-item">
                 <li> <a href="index.html" onclick="toggleMenu()"> Home</a></li>
                 <li> <a href="timeline.html" onclick="toggleMenu()"> Profile</a></li>
-                <li> <a href="profile" onclick="toggleMenu()">Quiz</a></li>
-                <li> <a href="jumpTo" onclick="toggleMenu()"> Jump</a></li>
+                <li> <a href="#" onclick="toggleMenu()">Quiz</a></li>
+                <li> <a href="#" onclick="toggleMenu()"> Jump</a></li>
                 <li> <a href="about.html" onclick="toggleMenu()"> About</a></li>
             </div>
         </div>
