--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -18,8 +18,8 @@
         <ul class="nav-menu">
             <li> <a href="index.html"> Home</a></li>
             <li> <a href="timeline.html"> Profile</a></li>
-            <li> <a href="profile"> Quiz</a></li>
-            <li> <a href="jumpTo"> Jump</a></li>
+            <li> <a href="#"> Quiz</a></li>
+            <li> <a href="#"> Jump</a></li>
             <li> <a href="about.html"> About</a></li>
         </ul>
     </nav>
@@ -39,8 +39,8 @@
             <div class="menu-item">
                 <li> <a href="index.html" onclick="toggleMenu()"> Home</a></li>
                 <li> <a href="timeline.html" onclick="toggleMenu()"> Profile</a></li>
-                <li> <a href="profile" onclick="toggleMenu()">Quiz</a></li>
-                <li> <a href="jumpTo" onclick="toggleMenu()"> Jump</a></li>
+                <li> <a href="#" onclick="toggleMenu()">Quiz</a></li>
+                <li> <a href="#" onclick="toggleMenu()"> Jump</a></li>
                 <li> <a href="about.html" onclick="toggleMenu()"> About</a></li>
             </div>
         </div> 
