--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -16,8 +16,8 @@
         <ul class="nav-menu">
             <li> <a href="index.html"> Home</a></li>
             <li> <a href="timeline.html"> Profile</a></li>
-            <li> <a href="profile"> Quiz</a></li>
-            <li> <a href="jumpTo"> Jump</a></li>
+            <li> <a href="#"> Quiz</a></li>
+            <li> <a href="#"> Jump</a></li>
             <li> <a href="about.html"> About</a></li>
         </ul>
     </nav>
