--- a/www/templates/timeline.html
+++ b/www/templates/timeline.html
@@ -39,7 +39,7 @@
                 <li> <a href="index.html" onclick="toggleMenu()"> Home</a></li>
                 <li> <a href="timeline.html" onclick="toggleMenu()"> Profile</a></li>
                 <li> <a href="#" onclick="toggleMenu()">Quiz</a></li>
-                <li> <a href="jumpTo" onclick="toggleMenu()"> Jump</a></li>
+                <li> <a href="#" onclick="toggleMenu()"> Jump</a></li>
                 <li> <a href="about.html" onclick="toggleMenu()"> About</a></li>
             </div>
         </div>
