Moving Timeline to index.html

--- a/www/static/css/styles.css
+++ b/www/static/css/styles.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,500;1,6..96,500&display=swap');
 
 
+*{
+    color: white;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 h1{
     font-family: "Playfair Display", serif; 
     text-align: center;
@@ -131,3 +138,121 @@ li, a {
 .hamburger-icon span:first-child{
     transform: none;
 }
+
+#timeline{
+    width: 100%;
+    min-height: 100vh;
+    padding: 100px 15px;
+}
+
+.timetine-title{
+    font-size: 2.5rem;
+    font-weight: 500px;
+    text-align: center;
+    padding: 30px 15px;
+    Margin: 30px;
+}
+
+.timeline-containers{
+    max-width: 1200px;
+    position: relative;
+    margin: auto;
+    flex-wrap: wrap;
+    display:flex;
+}
+.timeline-container{
+   
+   margin-bottom: 40px;
+   width: 100%;
+   display: flex;
+   flex-wrap: wrap;
+   position: relative;
+}
+.timeline-container:nth-child(odd){
+    padding-right: calc(50% + 30px) ;
+    text-align: right;
+}
+.timeline-container:nth-child(even){
+    padding-left: calc(50% + 30px) ;
+}
+.textbox{
+    background-color: #2F363E;
+    padding: 30px;
+    border-radius: 5px;
+}
+.timeline-containers::before{
+    content: '';
+    position: absolute;
+    width: 5px;
+    height: 100%;
+    background-color: white;
+    left: calc(50% - 1px);
+}
+.timeline-container:last-child{
+    margin-bottom: 0;
+}
+.timeline-dot{
+    height: 16px;
+    width: 16px;
+    background-color: yellow;
+    border-radius: 50%;
+    position: absolute;
+    margin-bottom: 20px;
+    top: 20px;
+    left: calc(50% - 7px);
+}
+.timeline-container:nth-child(odd) .timeline-rank{
+    margin: 6px 0 15px auto;
+}
+ .timeline-rank{
+    font-size: 2rem;
+    color: gold;
+    margin: 6px 0 15px;
+    position: relative;
+}
+.textbox h3{
+    font-size: 20px;
+    margin: 0 0 10px;
+    text-transform: capitalize;
+    font-weight: 500px;
+}
+.textbox{
+    font-size: 16px;
+    font-weight: 300px;
+    line-height: 22px;
+    min-width: 300px;
+}
+.textbox img{
+    position: relative;
+    width: 80px;
+    border-radius: 30%;
+}
+.textbox .btn{
+    background-color: darkorchid;
+    border-radius: 3px;
+}
+
+/* Inspired Deisng: 
+Youtube 1: https://www.youtube.com/watch?v=L9W33EuGjoY&list=LL&index=1
+Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
+*/
+
+/* animation */
+@keyframes appear {
+    from {
+        opacity: 0;
+        transform: scale(0.5); /* Use transform for scaling */
+    }
+    to {
+        opacity: 1; 
+        transform: scale(1); /* Use transform for scaling */
+    }
+}
+
+.timeline-container {
+    animation: appear linear; 
+    animation-timeline: view(); 
+    animation-range: entry 0 cover 40%;
+}
+/* Link to the Tutorial :  https://www.youtube.com/watch?v=0TnO1GzKWPc&t=82s */
+
