--- a/www/templates/timeline.html
+++ b/www/templates/timeline.html
@@ -45,7 +45,7 @@
         </div>
     </nav>
     <section id ="timeline">
-        <div class="timetine-title">President Of United State Of America</div>
+        <div class="timetine-title">Presidents Of United States Of America</div>
         <div class="timeline-containers">
             <div class="timeline-container">
                 <div class="timeline-dot"></div>
