--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -44,6 +44,93 @@
         </div>
         
     </nav>
+    
+    <section id ="timeline">
+        <div class="timetine-title">Presidents Of United States Of America</div>
+        <div class="timeline-containers">
+            <div class="timeline-container">
+                <div class="timeline-dot"></div>
+                <div class="timeline-rank">46th</div>
+                <div class="textbox">
+                    <img src="../asset/img/joeBiden.jpg">
+                    <h3 class = "title">Joe Biden </h3>
+                    <p> 2021-Present </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco
+                         laboris nisi ut aliquip.</p>
+                    <button class='btn'> Read More</button>
+                </div>
+            </div>
+                <div class="timeline-container">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-rank">45th</div>
+                    <div class="textbox">
+                        <img src="../asset/img/45_Trump.jpeg">
+                        <h3 class = "title">Donald Trump </h3>
+                        <p> 2017-2021 </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco
+                             laboris nisi ut aliquip.</p>
+                        <button class='btn'> Read More</button>
+                    </div>
+                </div>
+                <div class="timeline-container">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-rank">44th</div>
+                    <div class="textbox">
+                        <img src="../asset/img/44_Obama.jpeg">
+                        <h3 class = "title">Barack Obama</h3>
+                        <p> 2009-2017 </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco
+                             laboris nisi ut aliquip.</p>
+                        <button class='btn'> Read More</button>
+                    </div>
+                </div>
+                <div class="timeline-container">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-rank">44th</div>
+                    <div class="textbox">
+                        <img src="../asset/img/43_Bush.jpeg">
+                        <h3 class = "title">George W. Bush </h3>
+                        <p> 1789-1797 </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco
+                             laboris nisi ut aliquip.</p>
+                        <button class='btn'> Read More</button>
+                    </div>
+                </div>
+            
+                <div class="timeline-container">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-rank">44th</div>
+                    <div class="textbox">
+                        <img src="../asset/img/42_Clinton.jpeg">
+                        <h3 class = "title">Bill Clinton </h3>
+                        <p> 1789-1797 </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco
+                             laboris nisi ut aliquip.</p>
+                        <button class='btn'> Read More</button>
+                    </div>
+                </div>
+
+                <div class="timeline-container">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-rank">44th</div>
+                    <div class="textbox">
+                        <img src="../asset/img/41_Bush.jpeg">
+                        <h3 class = "title">George H. W. Bush </h3>
+                        <p> 1789-1797 </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco
+                             laboris nisi ut aliquip.</p>
+                        <button class='btn'> Read More</button>
+                    </div>
+                </div>
+        </div>
+    </div>
+    </section>
        
    <script src="../static/script/script.js"></script>
 </body>
