Flask Route and Index Page

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -8,7 +8,7 @@
     <title>Hello_President</title>
 
 </head>
-<body>
+<body onload="getData(); placeInfo();">
     <nav id="desktop-nav">
         <div class='logo'> 
         <a href="#"> Mr.President</a>    
@@ -50,84 +50,16 @@
         <div class="timeline-containers">
             <div class="timeline-container">
                 <div class="timeline-dot"></div>
-                <div class="timeline-rank">46th</div>
+                <div class="timeline-rank"></div>
                 <div class="textbox">
-                    <img src="../asset/img/joeBiden.jpg">
-                    <h3 class = "title">Joe Biden </h3>
-                    <p> 2021-Present </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco
-                         laboris nisi ut aliquip.</p>
+                    <img src="">
+                    <h3 class = "title"></h3>
+                    <p class = "serving-years"></p>
+                    <p></p>
                     <button class='btn'> Read More</button>
                 </div>
             </div>
-                <div class="timeline-container">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-rank">45th</div>
-                    <div class="textbox">
-                        <img src="../asset/img/45_Trump.jpeg">
-                        <h3 class = "title">Donald Trump </h3>
-                        <p> 2017-2021 </p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco
-                             laboris nisi ut aliquip.</p>
-                        <button class='btn'> Read More</button>
-                    </div>
-                </div>
-                <div class="timeline-container">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-rank">44th</div>
-                    <div class="textbox">
-                        <img src="../asset/img/44_Obama.jpeg">
-                        <h3 class = "title">Barack Obama</h3>
-                        <p> 2009-2017 </p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco
-                             laboris nisi ut aliquip.</p>
-                        <button class='btn'> Read More</button>
-                    </div>
-                </div>
-                <div class="timeline-container">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-rank">44th</div>
-                    <div class="textbox">
-                        <img src="../asset/img/43_Bush.jpeg">
-                        <h3 class = "title">George W. Bush </h3>
-                        <p> 1789-1797 </p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco
-                             laboris nisi ut aliquip.</p>
-                        <button class='btn'> Read More</button>
-                    </div>
-                </div>
-            
-                <div class="timeline-container">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-rank">44th</div>
-                    <div class="textbox">
-                        <img src="../asset/img/42_Clinton.jpeg">
-                        <h3 class = "title">Bill Clinton </h3>
-                        <p> 1789-1797 </p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco
-                             laboris nisi ut aliquip.</p>
-                        <button class='btn'> Read More</button>
-                    </div>
-                </div>
 
-                <div class="timeline-container">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-rank">44th</div>
-                    <div class="textbox">
-                        <img src="../asset/img/41_Bush.jpeg">
-                        <h3 class = "title">George H. W. Bush </h3>
-                        <p> 1789-1797 </p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco
-                             laboris nisi ut aliquip.</p>
-                        <button class='btn'> Read More</button>
-                    </div>
-                </div>
         </div>
     </div>
     </section>
