--- a/www/static/css/styles.css
+++ b/www/static/css/styles.css
@@ -257,3 +257,90 @@ Youtube 2: https://www.youtube.com/watch?v=1tLJEQwmVww&list=LL&index=2&t=621s
 }
 /* Link to the Tutorial :  https://www.youtube.com/watch?v=0TnO1GzKWPc&t=82s */
 
+/* search icon */
+.searchBox {
+    margin: 20px;
+    height: 50px;
+    display: flex;
+    justify-content: flex-start;
+    cursor: pointer;
+    padding: 10px;
+    width: 400px;
+    border-radius: 30px;
+    align-items: center;
+    background-color: #2C2F33; 
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); 
+    position: relative; 
+    z-index: 1;
+}
+
+.searchBox a img {
+    padding: 0;
+    margin: 0;
+    width: 25px;
+    height: 100%;
+}
+
+.searchBox input {
+    width: 0;
+    outline: none;
+    border: none;
+    font-weight: 500;
+    transition: width 1s ease, color 0.3s ease;
+    background: transparent;
+    color: #ECEFF4; 
+    height: 100%;
+}
+
+.searchBox input::placeholder {
+    color: #AAB0B6; 
+}
+
+.searchBox:hover input {
+    width: 100%; 
+    color: #ECEFF4; 
+    border-bottom: 2px solid #5E81AC;
+}
+
+.searchBox:hover {
+    background-color: #404552; 
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4); 
+}
+
+/* Search Results Styling */
+#results {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%; 
+    max-height:200px; 
+    overflow-y: auto; 
+    background-color: #2C2F33;
+    border-radius: 0 0 10px 10px; 
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    position: absolute;
+    top: 60px; 
+    left: 0;
+    z-index: 10; /* Ensures the dropdown appears above other elements */
+}
+
+/* Search result items */
+#results li {
+    padding: 10px;
+    color: #ECEFF4;
+    border-bottom: 1px solid #404552;
+    cursor: pointer;
+    display: block; 
+    box-sizing: border-box;
+}
+
+/* hover change the color */
+#results li:hover {
+    background-color: #404552;
+}
+
+/* Remove the bottom border for the last item */
+#results li:last-child {
+    border-bottom: none; 
+}
+
