Light/Dark Mode, Reversing Timeline

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -116,10 +116,15 @@
                         <a href="https://www.linkedin.com/in/flynn-nisbet/"> <div class = "tiny_picture"><img src = "../asset/img/linkedin.png"></div></a>
                     </div>
                 </div>
+            </div>
 
-
-        </div>
-                    
+            <div class = 'theme'>
+                <h3>Click to Toggle Light Mode<h3>
+                <label class="switch">
+                    <input type="checkbox" id="theme-toggle" onchange="toggleTheme()">
+                    <span class="slider"></span>
+                </label>
+            </div>        
     </div>
    </section>
 
