--- a/www/static/css/aboutstyles.css
+++ b/www/static/css/aboutstyles.css
@@ -102,3 +102,58 @@ p {
     flex-direction: row;
     padding: 10px;
 }
+
+.theme{
+    text-align: center;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    margin-top: 20px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 30px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #111220;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+body.light-mode {
+    --background-color: #efddc3;
+    --text-color: rgb(64, 56, 110);
+}
