--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -51,7 +51,7 @@
             <img src="../asset/img/search.png">
         </a>    
         <ul id='results'>
-            
+
         </ul>
     </div>
 
@@ -61,6 +61,11 @@
         <div class="timeline-containers"></div>
     </div>
     </section>
+
+    <div id="flyIcon" onclick ='scrollUp()' >
+        <img src="https://img.icons8.com/?size=100&id=166&format=png&color=000000" alt="flyicon"  />
+    </div>
+   
     
    <script src="../static/script/script.js" defer></script>
 </body>
